--- a/src/lang/es-ES.json
+++ b/src/lang/es-ES.json
@@ -65,6 +65,7 @@
     "sign.pass":"Contraseña",
     "sign.activ":"Activar cuenta",
     "sign.not":"* Aún no has activado tu cuenta gratuita.",
+    "sign.log":"Iniciar Sesión",
 
     "loged.home":"Inicio",
     "loged.tv":"Series TV",
